[package]

name    = "prophet" # other names: Pulsar
version = "0.3.0"
authors = ["Robbepop"]
license = "MIT"
readme  = "README.md"

keywords   = ["deep-learning", "neural-networks", "machine-learning", "classifier"]
categories = ["science"]

# homepage    = "https://github.com/robbepop/prophet"
repository    = "https://github.com/robbepop/prophet"
documentation = "https://docs.rs/prophet"
description   = """A neural network implementation with a focus on cache-efficiency and sequential performance."""

[dependencies]
rand         = "0.3.15"
num          = "0.1.40"
ndarray      = "0.10"
ndarray-rand = "0.6"
itertools    = "0.6"
log          = "0.3.8"
serde        = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
approx = "0.1.1"

[features]
default       = ["serde_support"]
benches       = []
serde_support = ["serde", "serde_derive", "ndarray/serde-1"]

[badges]
travis-ci = { repository = "Robbepop/prophet" }
appveyor  = { repository = "Robbepop/prophet", branch = "master", service = "github" }
